# Email-Triage-System

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
client/: agent.py  client.py
data/templates/: personal.json  spam.json  work.json
env/: config.py  models.py  openenv_wrapper.py  simulator.py
env/core/: environment.py  observation.py  transition.py
env/memory/: history.py  user_memory.py
evaluation/: benchmark.py  metrics.py
grader/: grader.py
log_collector/: event_logger.py  trajectory_logger.py
reward/: reward_engine.py
reward/components/: correctness.py  efficiency.py  safety.py
scripts/: debug_env.py  run_benchmark.py  run_easy_task.py  run_hard_task.py  run_medium_task.py  run_server.py
server/: app.py
tasks/: corpus.py  task_factory.py
tasks/definitions/: easy.py  hard.py  medium.py
tests/: test_env.py  test_reward.py  test_server.py  test_simulator.py
utils/: heuristics.py  logger.py  noise_injector.py  text_processing.py
